send data string with log and added new fragment for countdown

--- a/app/src/main/res/layout/device_control_activity.xml
+++ b/app/src/main/res/layout/device_control_activity.xml
@@ -1,7 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mediapipe_container"
+    android:id="@+id/device_control"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".DeviceControlActivity" />
+    android:layout_height="match_parent">
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/mediapipe_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".DeviceControlActivity" />
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/countdown_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".DeviceControlActivity" />
+</androidx.constraintlayout.widget.ConstraintLayout>
