--- a/app/src/main/res/layout/countdown_fragment.xml
+++ b/app/src/main/res/layout/countdown_fragment.xml
@@ -5,7 +5,6 @@
     android:layout_height="fill_parent"
     android:layout_gravity="bottom|center"
     tools:context=".CountDownFragment">
-
     <ToggleButton
         android:id="@+id/toggleButton"
         android:layout_width="wrap_content"
@@ -15,4 +14,17 @@
         android:textOff=""
         android:textOn=""
         android:background="@drawable/record_toggle"/>
+
+    <TextView
+        android:id="@+id/countdown_text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="100dp"
+        android:fontFamily="sans-serif-black"
+        android:gravity="center|bottom"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="42sp"
+        android:typeface="normal" />
 </FrameLayout>
