--- a/app/src/main/res/layout/mediapipe_fragment.xml
+++ b/app/src/main/res/layout/mediapipe_fragment.xml
@@ -1,4 +1,4 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/device_control"
@@ -17,5 +17,22 @@
             android:layout_height="fill_parent"
             android:text="@string/no_camera_access"
             android:gravity="center"/>
+
     </FrameLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <FrameLayout
+        android:id="@+id/preview_display_layout2"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_gravity="top|center"
+        android:layout_marginTop="100dp"
+        android:layout_weight="1" >
+        <ToggleButton
+            android:id="@+id/switchHandedness"
+            android:layout_width="100dp"
+            android:layout_height="fill_parent"
+            android:layout_gravity="top|left"
+            android:text=""
+            android:textOff="Left"
+            android:textOn="Right" />
+    </FrameLayout>
+</FrameLayout>
