--- a/app/src/main/res/layout/countdown_fragment.xml
+++ b/app/src/main/res/layout/countdown_fragment.xml
@@ -58,4 +58,16 @@
             android:text="infinite" />
     </RadioGroup>
 
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/chipGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:theme="@style/Theme.MaterialComponents.Light">
+        <com.google.android.material.chip.Chip
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="chip"
+            android:theme="@style/Theme.MaterialComponents.Light"/>
+    </com.google.android.material.chip.ChipGroup>
+
 </FrameLayout>
