--- a/app/src/main/res/drawable/ic_start_recording.xml
+++ b/app/src/main/res/drawable/ic_start_recording.xml
@@ -1,12 +1,17 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="88.8dp"
-    android:height="90.7dp"
-    android:viewportWidth="88.8"
-    android:viewportHeight="90.7">
+    android:width="99dp"
+    android:height="99dp"
+    android:viewportWidth="99"
+    android:viewportHeight="99">
   <path
-      android:pathData="M44.5,1.6C20.5,1.6 1,21.1 1,45.1s19.5,43.5 43.5,43.5S88,69.1 88,45.1S68.5,1.6 44.5,1.6zM44.5,84.6C22.7,84.6 5,66.9 5,45.1S22.7,5.6 44.5,5.6S84,23.3 84,45.1S66.3,84.6 44.5,84.6z"
+      android:pathData="M49.5,49.5m-40.5,0a40.5,40.5 0,1 1,81 0a40.5,40.5 0,1 1,-81 0"
+      android:strokeAlpha="0.29"
+      android:fillColor="#666666"
+      android:fillAlpha="0.29"/>
+  <path
+      android:pathData="M49.5,9C27.2,9 9,27.2 9,49.5S27.2,90 49.5,90S90,71.8 90,49.5S71.8,9 49.5,9zM49.5,86.3c-20.3,0 -36.8,-16.5 -36.8,-36.8s16.5,-36.8 36.8,-36.8s36.8,16.5 36.8,36.8S69.8,86.3 49.5,86.3z"
       android:fillColor="#FFFFFF"/>
   <path
-      android:pathData="M44.4,45.4m-38.2,0a38.2,38.2 0,1 1,76.4 0a38.2,38.2 0,1 1,-76.4 0"
+      android:pathData="M49.5,49.5m-13.5,0a13.5,13.5 0,1 1,27 0a13.5,13.5 0,1 1,-27 0"
       android:fillColor="#FFFFFF"/>
 </vector>
