--- a/app/src/main/res/layout/countdown_fragment.xml
+++ b/app/src/main/res/layout/countdown_fragment.xml
@@ -6,90 +6,82 @@
     android:layout_height="fill_parent"
     android:layout_gravity="bottom|center"
     tools:context=".CountDownFragment">
-    <ToggleButton
-        android:id="@+id/toggleButton"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
-        android:text=""
-        android:textOff=""
-        android:textOn=""
-        android:background="@drawable/record_toggle"/>
-    <TextView
-        android:id="@+id/countdown_text"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="100dp"
-        android:fontFamily="sans-serif-black"
-        android:gravity="center|bottom"
-        android:text=""
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="42sp"
-        android:typeface="normal" />
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/countdown_info"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|bottom"
+            android:gravity="center"
+            android:fontFamily="sans-serif-black"
+            android:text="Tap button to start recording"
+            android:textAlignment="center"
+            android:textColor="@color/colorWhite"
+            android:textSize="20sp"
+            android:typeface="normal"
+            android:layout_marginBottom="-20dp"/>
+        <TextView
+            android:id="@+id/countdown_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|bottom"
+            android:fontFamily="sans-serif-black"
+            android:text=""
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="42sp"
+            android:typeface="normal" />
+        <ToggleButton
+            android:id="@+id/toggleButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|bottom"
+            android:layout_marginBottom="20dp"
+            android:text=""
+            android:textOff=""
+            android:textOn=""
+            android:background="@drawable/record_toggle"/>
 
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_gravity="top|center"
-        android:layout_marginTop="40dp">
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/chipGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:theme="@style/Theme.MaterialComponents.Light"
+            app:checkedChip="@+id/chip1"
+            android:layout_gravity="bottom|center"
+            app:singleSelection="true">
 
-        <RadioButton
-            android:id="@+id/radio_zero"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="5s"
-            android:checked="true"/>
-        <RadioButton
-            android:id="@+id/radio_one"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="10s" />
-        <RadioButton
-            android:id="@+id/radio_two"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="20s" />
-        <RadioButton
-            android:id="@+id/radio_three"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="infinite" />
-    </RadioGroup>
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chip1"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="5s" />
 
-    <com.google.android.material.chip.ChipGroup
-        android:id="@+id/chipGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:theme="@style/Theme.MaterialComponents.Light"
-        app:singleSelection="true"
-        app:checkedChip="@+id/chip1">
-        <com.google.android.material.chip.Chip
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="5s"
-            style="@style/Widget.MaterialComponents.Chip.Choice"
-            android:id="@+id/chip1"/>
-        <com.google.android.material.chip.Chip
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/chip2"
-            android:text="10s"
-            style="@style/Widget.MaterialComponents.Chip.Choice"/>
-        <com.google.android.material.chip.Chip
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="20s"
-            android:id="@+id/chip3"
-            style="@style/Widget.MaterialComponents.Chip.Choice"/>
-        <com.google.android.material.chip.Chip
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="∞"
-            android:id="@+id/chip4"
-            style="@style/Widget.MaterialComponents.Chip.Choice"/>
-    </com.google.android.material.chip.ChipGroup>
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chip2"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="10s" />
 
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chip3"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="20s" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chip4"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="∞" />
+        </com.google.android.material.chip.ChipGroup>
+    </LinearLayout>
 </FrameLayout>
