settings left right hand

--- a/app/src/main/res/layout/countdown_fragment.xml
+++ b/app/src/main/res/layout/countdown_fragment.xml
@@ -53,6 +53,13 @@
             app:singleSelection="true">
 
             <com.google.android.material.chip.Chip
+                android:id="@+id/chip0"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="3s" />
+
+            <com.google.android.material.chip.Chip
                 android:id="@+id/chip1"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
