--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -1,7 +1,7 @@
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
     <PreferenceCategory app:title="Settings">
         <EditTextPreference
-            app:key="signature"
+            app:key="customDeviceName"
             app:title="@string/deviceName_title"
             app:useSimpleSummaryProvider="true" />
 
