--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -13,19 +13,17 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_refresh"
           android:checkable="false"
           android:orderInCategory="1"
-        app:showAsAction="ifRoom"
-        android:title="Main Menu" />
+            android:showAsAction="ifRoom"/>
     <item android:id="@+id/menu_scan"
           android:title="@string/menu_scan"
           android:orderInCategory="100"
-        app:showAsAction="ifRoom|withText" />
+        android:showAsAction="ifRoom|withText" />
     <item android:id="@+id/menu_stop"
           android:title="@string/menu_stop"
           android:orderInCategory="101"
-        app:showAsAction="ifRoom|withText" />
+        android:showAsAction="ifRoom|withText" />
 </menu>
