--- a/app/src/main/res/menu/gatt_services.xml
+++ b/app/src/main/res/menu/gatt_services.xml
@@ -14,17 +14,21 @@
         limitations under the License.
         -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/menu_header">
 <item android:id="@+id/menu_refresh"
         android:checkable="false"
         android:orderInCategory="1"
-        android:showAsAction="ifRoom" />
+        android:showAsAction="ifRoom"
+    tools:ignore="AppCompatResource,MenuTitle" />
 <item android:id="@+id/menu_connect"
         android:title="@string/menu_connect"
         android:orderInCategory="100"
-        android:showAsAction="ifRoom|withText" />
+        android:showAsAction="ifRoom|withText"
+    tools:ignore="AppCompatResource" />
 <item android:id="@+id/menu_disconnect"
         android:title="@string/menu_disconnect"
         android:orderInCategory="101"
-        android:showAsAction="ifRoom|withText" />
+        android:showAsAction="ifRoom|withText"
+    tools:ignore="AppCompatResource" />
 </menu>
