--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -13,17 +13,21 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_refresh"
           android:checkable="false"
           android:orderInCategory="1"
-            android:showAsAction="ifRoom"/>
+        android:showAsAction="ifRoom"
+        tools:ignore="AppCompatResource,MenuTitle" />
     <item android:id="@+id/menu_scan"
           android:title="@string/menu_scan"
           android:orderInCategory="100"
-        android:showAsAction="ifRoom|withText" />
+        android:showAsAction="ifRoom|withText"
+        tools:ignore="AppCompatResource" />
     <item android:id="@+id/menu_stop"
           android:title="@string/menu_stop"
           android:orderInCategory="101"
-        android:showAsAction="ifRoom|withText" />
+        android:showAsAction="ifRoom|withText"
+        tools:ignore="AppCompatResource" />
 </menu>
